[package]
name = "reldiff"
version = "0.1.0"
authors = ["LukeThoma5 <luke.4man@btinternet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
anyhow = "1.0"
structopt = "0.3"
regex = "1.3.7"
lazy_static = "1.4.0"
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }